# jill-sourcing-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
apps/api/: .env.example  docker-compose.yml  manage.py  pyproject.toml
apps/api/src/zenapi/: asgi.py  wsgi.py
apps/api/src/zenapi/config/: urls.py
apps/api/src/zenapi/config/settings/: __init__.py
apps/api/src/zenapi/config/url_confs/: email.py  sourcing.py  ui.py  urls.py
apps/api/tests/: conftest.py  factories.py  test_multitenant.py
apps/api/tests/sourcing/: test_api.py  test_linkedin.py  test_outreach_sm.py  test_portal.py  test_rls.py  test_ui.py
apps/worker/: pyproject.toml
apps/worker/src/jill/: __init__.py  cli.py  config.py  detect.py  enrich.py
apps/worker/src/jill/agent/: claude.py  drafting.py  planning.py  prompts.py  rubric.py  schemas.py  scoring.py  triage.py
apps/worker/src/jill/brightdata/: __init__.py  base.py  errors.py  live.py  mock.py  retry.py  types.py
apps/worker/src/jill/brightdata/fixtures/companies/: retell-ai.json  vapi.json
apps/worker/src/jill/brightdata/fixtures/profiles/: alice-nguyen.json  bob-martinez.json  dave-okoro.json  frank-li.json
apps/worker/src/jill/outreach/: __init__.py  deliver.py  live.py
apps/worker/src/jill/pipeline/: evaluate.py  expand.py  ingest.py  outreach.py  run.py  score.py
apps/worker/src/jill/webpy/: __init__.py  client.py  fake.py
apps/worker/src/jill/workflows/: __init__.py  activities.py  runner.py  types.py  workflow.py
apps/worker/tests/: test_activities.py  test_brightdata.py  test_cli.py  test_detect.py  test_enrich.py  test_expand.py  test_ingest.py  test_outreach.py  test_rubric.py  test_scoring.py  test_smoke.py  test_workflow.py
docs/sourcing/: cli.md  constraints.md  plan.md  prd.md  tests.md
